# roboMuseV

./: readme.md
ardu code/: ard.txt
hector_slam/hector_mapping/launch/: mapping_default.launch
hector_slam/hector_slam_launch/launch/: frames.gv
hector_slam/hector_slam_launch/rviz_cfg/: mapping_demo.rviz
mybot_description/launch/: mybot_rviz.launch
mybot_description/meshes/: chassis.STL  lwheel.STL  rwheel.STL
mybot_description/rviz/: amcl.rviz
mybot_description/urdf/: materials.xacro  mybot.gazebo  mybot.xacro
mybot_gazebo/launch/: amcl.launch  gmapping.launch  mybot_world.launch
mybot_gazebo/maps/: myHome.pgm  myHome.yaml
robomuse5_navigation/: CMakeLists.txt  my_map.yaml  package.xml
robomuse5_navigation/launch/: amcl.launch  bringup.launch  gmapping_demo.launch  mapping.launch  move_base.launch  navigation.launch
robomuse5_navigation/params/: base_local_planner.yaml  costmap_common_params.yaml  global_costmap.yaml  local_costmap.yaml  move_base_params.yaml
robomuse5_navigation/src/: teleop.py  teleop_twist_keyboard.py  tf_broadcaster.cpp  tf_listener.cpp
robomuse_description/: CMakeLists.txt  package.xml
robomuse_description/gazebo/: gazebo.urdf.xacro
robomuse_description/meshes/: base.stl  rack.stl  wheel.stl
robomuse_description/robots/: robomuse.urdf.xacro
robomuse_description/urdf/: common.xacro  materials.urdf.xacro
robomuse_description/urdf/base/: base.gazebo.xacro  base.transmission.xacro  base.urdf.xacro
robomuse_description/urdf/rack/: rack.gazebo.xacro  rack.urdf.xacro
robomuse_description/urdf/sensors/: kinect_camera.urdf.xacro
robomuse_gazebo/: CMakeLists.txt  package.xml
robomuse_gazebo/launch/: ridgeback_world.launch
ros_arduino-indigo-devel/ros_arduino_base/cfg/: MotorGains.cfg
ros_arduino-indigo-devel/ros_arduino_base/config/: default.yaml
ros_arduino-indigo-devel/ros_arduino_base/firmware/two_wheel_base/: two_wheel_base.ino
ros_arduino-indigo-devel/ros_arduino_base/include/ros_arduino_base/: UpdateGains.h  UpdateGainsRequest.h  UpdateGainsResponse.h  ros_arduino_base.h
ros_arduino-indigo-devel/ros_arduino_base/launch/: base_bringup.launch
ros_arduino-indigo-devel/ros_arduino_base/src/: ros_arduino_base.cpp  ros_arduino_base_node.cpp
ros_arduino-indigo-devel/ros_arduino_base/srv/: UpdateGains.srv
ros_arduino-indigo-devel/ros_arduino_msgs/: CMakeLists.txt
rplidar_ros/launch/: rplidar.launch
rplidar_ros/rviz/: rplidar.rviz
